--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="UTF-8">
 	<title>Shopper</title>
 </head>
 <body>
 	<div class="main">
+	<h1 class="head">Shopper</h1>
+	<input type="text" class="add-btn">
 		<ul class="list">
 			<li></li>
 			<li></li>
