--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
 <body>
 	<div class="main">
 	<h1 class="head">Shopper</h1>
-	<input type="text" class="add-btn">
+	<div class="form-func">
+	<input type="text" class="input">
+	<button class="add-btn">Add to List</button>
+	</div>
 		<ul class="list">
-			<li></li>
-			<li></li>
-			<li></li>
+			<li>Food item one</li>
+			<li>Food item two</li>
+			<li>Food item three</li>
+			<li class="removed">Food item four</li>
+			<li class="removed">Food item five</li>
 		</ul>
+		<p>Total: $</p>
 	</div>
 </body>
 </html>
