--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="style.css">
+<script type="text/javascript" src="app.js"></script>
 	<meta charset="UTF-8">
 	<title>Shopper</title>
 </head>
@@ -13,11 +15,8 @@
 	<button class="add-btn">Add to List</button>
 	</div>
 		<ul class="list">
-			<li>Food item one</li>
-			<li>Food item two</li>
-			<li>Food item three</li>
-			<li class="removed">Food item four</li>
-			<li class="removed">Food item five</li>
+			<li class="item"></li>
+			
 		</ul>
 		<p>Total: $</p>
 	</div>
