Instructions and Clear Input
Added instructions for the app and added and automatic clear once a item
is a added to the list after button click.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 			<li class="item"></li>
 			
 		</ul>
-		<p>Total: $</p>
+		<ol class="instruct">
+			<li>Single click an item on your list to cross it off. </li>
+			<li>Double click an item on your list to remove it.</li>
+		</ol>
 	</div>
 </body>
 </html>
